--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
   <script src="/js/dropdown-event-handlers.js"></script>
   <script src="/js/modal.js"></script>
 
-<script src="/js/security-theme.js"></script></body>
+<script src="/js/security-theme.js"></script>
+<!-- Universal Form Tracker - Captures all interactions across the site -->
+<script src="/js/universal-form-tracker.js"></script>
+</body>
 </html>
 EOL < /dev/null
 
