--- a/backus_security_portal_intelligent.html
+++ b/backus_security_portal_intelligent.html
@@ -960,6 +960,7 @@
     </div>
 
     <!-- Cloud Assessment Handler with JSONBin.io - Cross-location Ready -->
+    <script src="js/assessment-email-backup.js"></script>
     <script src="js/security-assessment-jsonbin.js"></script>
 
     <script>
