Update main portal with cache-busting parameter

--- a/backus_security_portal_intelligent.html
+++ b/backus_security_portal_intelligent.html
@@ -960,8 +960,8 @@
     </div>
 
     <!-- Cloud Assessment Handler with JSONBin.io - Cross-location Ready -->
-    <script src="js/assessment-email-backup.js"></script>
-    <script src="js/security-assessment-jsonbin.js"></script>
+    <script src="js/assessment-email-backup.js?v=2025100301"></script>
+    <script src="js/security-assessment-jsonbin.js?v=2025100301"></script>
 
     <script>
         // State Management
